Fix legend images not showing up on website, add background image to local resources

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     margin-top: 0em;
     margin-left: 0em;
     margin-right: 0em;
-    background: url("https://images6.alphacoders.com/992/992033.jpg") no-repeat center center fixed;
+    background: url("res/images/backgrounds/apex-background.jpg") no-repeat center center fixed;
     background-size: cover;
 }
 /* #endregion */
